src/components/event-item/event-item.scss
event-item {
$secondary : map-get($map: $colors, $key:"secondary" );

 .ctn{
    height: 30vh;
    width: 100%;
    position: relative;
 }

 .text{
     position: absolute;
     bottom: 5vh;
     margin-bottom: 10px;
     left: 20px;
 }

 .title{
     font-size: 3.6vh;
     font-weight: bold;
    //  color: white;
 }

 .image{
     width: inherit;
     height: inherit;
     object-fit: cover;
     object-position: center;
 }


  @-moz-keyframes spin {100% {-moz-transform: rotate(360deg);}}
  @-webkit-keyframes spin {100% {-webkit-transform: rotate(360deg);}}
  @keyframes spin {100% {-webkit-transform: rotate(360deg);transform: rotate(360deg);}}

 .image-loading{
     position: absolute;
     top: calc(50% - 30px) ;
     left: calc(50% - 20px);
 }

 .address{
    font-size: 3.2vh;
    // color: white;
 }

 .submissions{
     position: absolute;
     bottom: 0px;
     display: flex;
     flex-direction: row; 
     width: 100%;
     background-color: rgba($color: #000000, $alpha: .3);
     padding: 4px 4px 4px 20px;
 }  

 ion-chip{
     font-weight: bold;
     line-height: 3vmin !important;
     height: 3vmin !important;
     
     ion-icon{
        height: 2.8vmin;
        width: 2.8vmin;
    }
    ion-label{
        font-size: 2.8vmin;
    }
 }

 .sync-icon{
     position: absolute;
     top: 0;
     right: 0;
     color: white;
     background: linear-gradient(to top right, transparent 0%,transparent 50%, $secondary 50%, $secondary 100%);
     height: 7vh;
     width: 7vh;
     text-align: right;
     padding: 1vh;
     ion-icon{
        -webkit-animation: spin 700ms linear infinite;
        -moz-animation: spin 700ms linear infinite;
        animation: spin 700ms linear infinite;
         font-size:3vh;
     }
 }


}

